crates/main/amethystate/tests/snapshots/error_reports__map_entry_wrong_type_redb.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
the value could not be encoded or decoded
├╴as: u32
├╴value bytes: 5
├╴prefix: cols
├╴entry: cpu
│
├─▶ Erased codec error: wrong msgpack marker FixStr(4)
│
╰─▶ wrong msgpack marker FixStr(4)
