crates/main/amethystate/tests/snapshots/error_reports__map_entry_wrong_type_ron.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
the value could not be encoded or decoded
├╴as: u32
├╴store: <store>
├╴prefix: cols
├╴entry: cpu
│
├─▶ Erased codec error: Expected u32 but found the string "wide" instead
│
╰─▶ Expected u32 but found the string "wide" instead
