crates/main/amethystate/tests/snapshots/error_reports__map_modify_on_an_absent_key.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
nothing is stored at `cpu`
╰╴prefix: cols
