crates/main/amethystate/tests/snapshots/error_reports__volatile_field_an_interceptor_refused.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: err.to_string()
---
an interceptor turned down the write to app.session: refused by an interceptor on the field
